2007-04-09  Matthias Wimmer  <m@tthias.eu>

    * jabberd/xdb.cc: declaring local functions xdb_results(), xdb_deliver()
	and xdb_thump() as static and therefore removing them from the
	interface
    * jabberd/deliver.cc: fixing some edge cases in deliver_instance() even
    	if they seem not to be used

2007-04-07  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xhash.cc: Fix in handling "" as key
    * jabberd/base/base_dir.cc: Fix memory leak when stanza is written to a
	directory using the base_dir handler (<dir/> in config file)
    * jabberd/deliver.cc: Fix memory leak if there is no packet handler in
	an instance (happens if the base_dir handler is only configured to
	inject, but not to write stanzas to files)

2007-03-29  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.cc: improved jadc2s compatibility

2007-03-26  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.cc: improved jadc2s compatibility

2007-03-23  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: fix bug in closing a socket
    * jabberd/lib/str.cc: fix bug in XML escaping

2007-03-19  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/str.cc: fixing XML escaping error for character >
    * jabberd/lib/xmlnode.cc: using the db: prefix for the
	jabber:server:dialback namespace
    * dialback/dialback_out.cc: using correct namespace for mechanisms
	attribute on the SASL <auth/> element (no namespace)

2007-03-18  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.cc: modified handling of XML serialization and NS
	declaration handling
    * jabberd/lib/str.cc: same
    * jabberd/lib/expat.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/xstream.cc: same
    * jabberd/jabberd.h: same
    * jabberd/mio_xml.cc: same
    * jabberd/config.cc: same
    * jabberd/xdb.cc: same
    * jabberd/log.cc: same
    * jabberd/mio.cc: same
    * jabberd/deliver.cc: same
    * jabberd/base/base_load.cc: same
    * jabberd/base/base_stdout.cc: same